Fixes font not being properly applied

--- a/src/theme/global-styles.css
+++ b/src/theme/global-styles.css
@@ -89,10 +89,12 @@ video {
 
 html {
   font-size: 10px;
-  font-weight: 400;
   font-family: 'Poppins', sans-serif;
   background-color: #007ced;
   background-image: url(/images/page-background.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 html,
@@ -103,4 +105,6 @@ body {
 
 * {
   box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
