--- a/src/theme/global-styles.css
+++ b/src/theme/global-styles.css
@@ -98,6 +98,7 @@ body,
 
 * {
   box-sizing: border-box;
+  list-style: none;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
