feat: removes last @emotion/react usages and opts in the Next.js SWC compiler

--- a/src/components/Portfolio/PortfolioItem.module.css
+++ b/src/components/Portfolio/PortfolioItem.module.css
@@ -14,6 +14,14 @@
 }
 
 .itemImage {
+  transition: transform 500ms ease, filter 500ms ease;
+}
+
+.itemImageHovering {
+  transform: scale(1.1);
+}
+
+.itemCompanyImage {
   width: 100%;
   height: 100%;
   position: relative;
