--- a/src/components/NavigationMenu/MobileNavigationMenu.module.css
+++ b/src/components/NavigationMenu/MobileNavigationMenu.module.css
@@ -1,11 +1,15 @@
-.navigationMenu {
+.navigationMenuIcon {
   width: 2.5rem;
   height: 2.5rem;
   color: var(--color-white);
 }
 
+.navigationMenu {
+  width: 25rem;
+}
+
 @media only screen and (min-width: 768px) {
-  .navigationMenu {
+  .navigationMenuIcon {
     display: none !important;
   }
 }
