--- a/src/theme/global-styles.css
+++ b/src/theme/global-styles.css
@@ -87,14 +87,20 @@ video {
   vertical-align: baseline;
 }
 
-html,
-body,
-#__next {
+html {
   width: 100vw;
-  height: 100vh;
+  height: -moz-available;
+  height: -webkit-fill-available;
   font-size: 10px;
   font-display: swap;
   font-family: 'Montserrat', sans-serif;
+  background-color: var(--color-black);
+}
+
+body,
+#__next {
+  width: 100%;
+  height: 100%;
 }
 
 * {
