--- a/src/components/Travels/TravelItem.module.css
+++ b/src/components/Travels/TravelItem.module.css
@@ -1,11 +1,11 @@
-.cityHeadingWrapper {
+.travelHeadingWrapper {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin: 3rem 0;
 }
 
-.cityName {
+.travelName {
   font-size: 2.5rem;
   text-transform: uppercase;
   color: var(--color-white);
