--- a/src/components/Music/MusicStatistics.module.css
+++ b/src/components/Music/MusicStatistics.module.css
@@ -14,10 +14,9 @@
 }
 
 .statisticValue {
-  font-size: 3rem;
   margin-bottom: 1.5rem;
   color: var(--color-white);
-  font-weight: var(--font-weight-bold);
+  font-weight: var(--font-weight-);
 }
 
 .statisticName {
@@ -35,10 +34,6 @@
   .statisticWrapper {
     flex: 0 0 50%;
     margin-bottom: 1.5rem;
-  }
-
-  .statisticValue {
-    font-size: 2rem;
   }
 
   .statisticName {
