--- a/src/components/Portfolio/PortfolioPage.module.css
+++ b/src/components/Portfolio/PortfolioPage.module.css
@@ -4,10 +4,10 @@
 }
 
 .title {
+  text-align: center;
+  margin-bottom: 3rem;
   color: var(--color-white);
-  font-size: 3rem;
-  font-weight: var(--font-weight-boldest);
-  margin-bottom: 5rem;
+  font-weight: var(--font-weight-semi-bold);
 }
 
 .gridWrapper {
