--- a/src/components/Travels/TravelCountries.module.css
+++ b/src/components/Travels/TravelCountries.module.css
@@ -2,9 +2,7 @@
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  font-size: 1.5rem;
-  margin: 2rem 0;
+  margin-bottom: 3rem;
   color: var(--color-white);
   justify-content: center;
 }
