--- a/src/components/Travels/TravelItem.module.css
+++ b/src/components/Travels/TravelItem.module.css
@@ -6,10 +6,8 @@
 }
 
 .travelName {
-  font-size: 2.5rem;
-  text-transform: uppercase;
   color: var(--color-white);
-  font-weight: var(--font-weight-boldest);
+  font-weight: var(--font-weight-bold);
 }
 
 .imageWrapper {
@@ -28,7 +26,7 @@
   position: absolute;
   padding: 1rem;
   font-size: 2rem;
-  font-weight: var(--font-weight-boldest);
+  font-weight: var(--font-weight-bold);
   width: 100%;
   display: flex;
   align-items: center;
