--- a/src/components/Travels/TravelsList.module.css
+++ b/src/components/Travels/TravelsList.module.css
@@ -42,7 +42,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-weight: var(--font-weight-boldest);
+  font-weight: var(--font-weight-bold);
 }
 
 .travelName::after {
