--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -10,6 +10,7 @@
 
   /* Layers */
   --layer-100: 100;
+  --layer-200: 200;
 
   /* Palette of colors */
   --color-pink: #bb86fc;
@@ -18,10 +19,22 @@
   --color-grey: #555;
   --color-dark-grey: #111;
   --color-light-grey: #bbb;
+
+  --color-grey-100: #f5f5f5;
+  --color-grey-200: #eeeeee;
+  --color-grey-300: #e0e0e0;
+  --color-grey-400: #bdbdbd;
+  --color-grey-500: #9e9e9e;
+  --color-grey-600: #757575;
+  --color-grey-700: #616161;
+  --color-grey-800: #424242;
+  --color-grey-900: #212121;
 }
 
 /* The following sizes were generated using the major second scale on https://type-scale.com/ */
-p {
+a,
+p,
+span {
   font-size: 1.6rem;
   line-height: 1.5;
 }
